objects/ssot__CareRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcknowledgementLetterSentDateTime__c</fullName>
        <label>Acknowledgement Letter Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualAdmissionDateTime__c</fullName>
        <label>Actual Admission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualDischargeDateTime__c</fullName>
        <label>Actual Discharge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AdmissionNotesText__c</fullName>
        <label>Admission Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdmissionSourceID__c</fullName>
        <label>Admission Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdmissionTypeID__c</fullName>
        <label>Admission Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AmbulanceTransportReason__c</fullName>
        <label>Ambulance Transport Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AmbulanceTransportType__c</fullName>
        <label>Ambulance Transport Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AorReceivedDateTime__c</fullName>
        <label>Aor Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AorRequestedDateTime__c</fullName>
        <label>Aor Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AppealEffectuationDateTime__c</fullName>
        <label>Appeal Effectuation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AppealRequestReasonType__c</fullName>
        <label>Appeal Request Reason Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppointedRepVerbalContactDateTime__c</fullName>
        <label>Appointed Rep Verbal Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AppointedRepWrittenContactDateTime__c</fullName>
        <label>Appointed Rep Written Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AppointedRepresentativeId__c</fullName>
        <label>Appointed Representative</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedLengthOfStayDayQuantity__c</fullName>
        <label>Approved Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedLevelOfCare__c</fullName>
        <label>Approved Level Of Care</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationReferenceIdentifier__c</fullName>
        <label>Authorization Reference Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestCaseId__c</fullName>
        <label>Care Request Case</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestQuantityType__c</fullName>
        <label>Care Request Quantity Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequest_MemberId_map_Patient_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_MemberId_map_Patient_Id_N_1</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>CareRequest_MemberId_map_Patient_Id_N_1</relationshipLabel>
        <relationshipName>CareRequest_MemberId_map_Patient_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequest_ReopenedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_ReopenedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CareRequest_ReopenedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>CareRequest_ReopenedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimNumberText__c</fullName>
        <label>Claim Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalCaseType__c</fullName>
        <label>Clinical Case Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CriteriaMet__c</fullName>
        <label>Criteria Met</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CumulativeLengthOfStayDays__c</fullName>
        <label>Cumulative Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentLevelOfCare__c</fullName>
        <label>Current Level Of Care</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionDateTime__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionDaysRemainingQuantity__c</fullName>
        <label>Decision Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionLetterText__c</fullName>
        <label>Decision Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionNotesText__c</fullName>
        <label>Decision Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionReasonDescriptionText__c</fullName>
        <label>Decision Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionReason__c</fullName>
        <label>Decision Reason</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedLengthOfStayDayQuantity__c</fullName>
        <label>Denied Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedLevelOfCare__c</fullName>
        <label>Denied Level Of Care</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispositionNotesText__c</fullName>
        <label>Disposition Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocAttachmentStatus__c</fullName>
        <label>Document Attachment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDateTime__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDateTime__c</fullName>
        <label>Effective To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExtensionRequestReceivedDateTime__c</fullName>
        <label>Extension Request Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalComplaintIdentifierText__c</fullName>
        <label>External Complaint Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityRecordNumber__c</fullName>
        <label>FacilityRecordNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityRoomBedType__c</fullName>
        <label>Facility Room Bed Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityRoomNumber__c</fullName>
        <label>FacilityRoomNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinalLevelOfCare__c</fullName>
        <label>Final Level Of Care</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstReviewerId__c</fullName>
        <label>First Reviewer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstReviewerNotesText__c</fullName>
        <label>First Reviewer Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneralPractitionerId__c</fullName>
        <label>General Practitioner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneralPractitionerObject__c</fullName>
        <label>General Practitioner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenlPrctnrVerbalNtfyDateTime__c</fullName>
        <label>General Prctnr Verbal Notified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GenlPrctnrWrittenNtfyDateTime__c</fullName>
        <label>General Prctnr Written Ntfy Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GrievanceType__c</fullName>
        <label>Grievance Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthPlanSubscriberId__c</fullName>
        <label>Health Plan Subscriber</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HomeHealthCertificationEndDate__c</fullName>
        <label>Home Health Certification End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HomeHealthCertificationStartDate__c</fullName>
        <label>Home Health Certification Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HomeHealthStartDate__c</fullName>
        <label>Home Health Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Request Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndependentReviewDeterminationDate__c</fullName>
        <label>Independent Review Determination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__IndependentReviewDeterminationText__c</fullName>
        <label>Independent Review Determination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndependentReviewSubmissionDateTime__c</fullName>
        <label>Independent Review Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InfoReceivedDateTime__c</fullName>
        <label>Info Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InfoRequestedDateTime__c</fullName>
        <label>Info Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InitialDenialNotificationDate__c</fullName>
        <label>Initial Denial Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InitialDenialNotificationTime__c</fullName>
        <label>Initial Denial Notification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExtendedRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Extended Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsIndependentReviewRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Independent Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsMedicareCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Medicare Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsParticipatingProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Participating Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsReadmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Readmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsServiceOrMedicationReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Or Medication Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MedicalDirectorId__c</fullName>
        <label>Medical Director</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicalDirectorNotesText__c</fullName>
        <label>Medical Director Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberAccountId__c</fullName>
        <label>Member Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberConditionText__c</fullName>
        <label>Member Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberContactDateTime__c</fullName>
        <label>Member Contact Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MemberDateOfBirth__c</fullName>
        <label>Member Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__MemberFirstName__c</fullName>
        <label>Member First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberGender__c</fullName>
        <label>Member Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberGroupNumber__c</fullName>
        <label>Member Group Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberInsuranceIdentifier__c</fullName>
        <label>Member Insurance Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberLastName__c</fullName>
        <label>Member Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPrimaryPlanId__c</fullName>
        <label>Member Primary Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPrognosis__c</fullName>
        <label>Member Prognosis</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberSecondaryPlanId__c</fullName>
        <label>Member Secondary Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberStatusText__c</fullName>
        <label>Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberVerbalNotificationDateTime__c</fullName>
        <label>Member Verbal Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MemberWrittenNotificationDateTime__c</fullName>
        <label>Member Written Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ModificationDateTime__c</fullName>
        <label>Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedLengthOfStayDayQuantity__c</fullName>
        <label>Modified Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedLevelOfCare__c</fullName>
        <label>Modified Level Of Care</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextReviewDateTime__c</fullName>
        <label>NextR eview Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NursingHomeResidentialStatus__c</fullName>
        <label>Nursing Home Residential Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalDenialMedicalDirectorId__c</fullName>
        <label>Original Denial Medical Director</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParProvider__c</fullName>
        <label>Par Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceOfServiceId__c</fullName>
        <label>Place Of Service</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerContactDateTime__c</fullName>
        <label>PractitionerContactDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PriorDischargeStatus__c</fullName>
        <label>Prior Discharge Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedDateTime__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReconsiderationDenialNotificationDate__c</fullName>
        <label>Reconsideration Denial Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReconsiderationDenialNotificationTime__c</fullName>
        <label>Reconsideration Denial Notification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceCareRequestCaseId__c</fullName>
        <label>Reference Care Request Case</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceCaseNumberText__c</fullName>
        <label>Reference Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceCaseRelationType__c</fullName>
        <label>Reference Case Relation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenDecisionDateTimeTime__c</fullName>
        <label>Reopen Decision Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenReasonDescription__c</fullName>
        <label>Reopen Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenReasonID__c</fullName>
        <label>Reopen Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenRequestOutcomeId__c</fullName>
        <label>Reopen Request Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenRequestType__c</fullName>
        <label>Reopen Request Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenedById__c</fullName>
        <label>Reopened By</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReopenedDateTime__c</fullName>
        <label>Reopened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestDueDateTime__c</fullName>
        <label>Request Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestExtensionReasonText__c</fullName>
        <label>Request Extension Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestExtnDecisionDate__c</fullName>
        <label>Request Extn Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestOutcomeDescText__c</fullName>
        <label>Request Outcome Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestOutcomeType__c</fullName>
        <label>Request Outcome Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestPrctnrWrittenNtfyDateTime__c</fullName>
        <label>Request Prctnr Written Notified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestType__c</fullName>
        <label>Request Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedDateTime__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedLengthOfStayDayQuantity__c</fullName>
        <label>Requested Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedLevelOfCareID__c</fullName>
        <label>Requested Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterType__c</fullName>
        <label>Requester Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerId__c</fullName>
        <label>Requesting Practitioner</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerLicenseID__c</fullName>
        <label>Requesting Practitioner License</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerObject__c</fullName>
        <label>Requesting Practitioner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerSpecialty__c</fullName>
        <label>Requesting Practitioner Specialty</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDateTime__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDescriptionText__c</fullName>
        <label>Resolution Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionLetterSentDateTime__c</fullName>
        <label>Resolution Letter Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionNotesText__c</fullName>
        <label>Resolution Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewDateTime__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RootCauseNotesText__c</fullName>
        <label>Root Cause Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RqstPrctnrVerbalNtfyDateTime__c</fullName>
        <label>Request Prctnr Verbal Ntfy Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledAdmissionDateTime__c</fullName>
        <label>Scheduled Admission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDischargeDateTime__c</fullName>
        <label>Scheduled Discharge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceDate__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceLevelType__c</fullName>
        <label>Service Level Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeText__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityObject__c</fullName>
        <label>Servicing Facility Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerId__c</fullName>
        <label>Servicing Practitioner</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerLicense__c</fullName>
        <label>Servicing Practitioner License</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerObject__c</fullName>
        <label>Servicing Practitioner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerSpecialty__c</fullName>
        <label>Servicing Practitioner Specialty</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriberMemberIdentifierText__c</fullName>
        <label>Subscriber Member Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmbulanceTransportDistanceNumber__c</fullName>
        <label>Total Ambulance Transport Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitofMeasureId__c</fullName>
        <label>Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722507936_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_MemberSecondaryPlanId_ma_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CareRequest_MemberSecondaryPlanId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722507936_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722518349_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_GeneralPractitionerId_ma_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareRequest_GeneralPractitionerId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722518349_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722523817_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_RequestingPractitionerId_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareRequest_RequestingPractitionerId_rel</relationshipLabel>
        <relationshipName>rel_1716722523817_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>